// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDays returns an array of days in the month 1`] = `
Array [
  Object {
    "label": 1,
    "value": 1,
  },
  Object {
    "label": 2,
    "value": 2,
  },
  Object {
    "label": 3,
    "value": 3,
  },
  Object {
    "label": 4,
    "value": 4,
  },
  Object {
    "label": 5,
    "value": 5,
  },
  Object {
    "label": 6,
    "value": 6,
  },
  Object {
    "label": 7,
    "value": 7,
  },
  Object {
    "label": 8,
    "value": 8,
  },
  Object {
    "label": 9,
    "value": 9,
  },
  Object {
    "label": 10,
    "value": 10,
  },
  Object {
    "label": 11,
    "value": 11,
  },
  Object {
    "label": 12,
    "value": 12,
  },
  Object {
    "label": 13,
    "value": 13,
  },
  Object {
    "label": 14,
    "value": 14,
  },
  Object {
    "label": 15,
    "value": 15,
  },
  Object {
    "label": 16,
    "value": 16,
  },
  Object {
    "label": 17,
    "value": 17,
  },
  Object {
    "label": 18,
    "value": 18,
  },
  Object {
    "label": 19,
    "value": 19,
  },
  Object {
    "label": 20,
    "value": 20,
  },
  Object {
    "label": 21,
    "value": 21,
  },
  Object {
    "label": 22,
    "value": 22,
  },
  Object {
    "label": 23,
    "value": 23,
  },
  Object {
    "label": 24,
    "value": 24,
  },
  Object {
    "label": 25,
    "value": 25,
  },
  Object {
    "label": 26,
    "value": 26,
  },
  Object {
    "label": 27,
    "value": 27,
  },
  Object {
    "label": 28,
    "value": 28,
  },
  Object {
    "label": 29,
    "value": 29,
  },
  Object {
    "label": 30,
    "value": 30,
  },
  Object {
    "label": 31,
    "value": 31,
  },
]
`;

exports[`getDays returns an array of days in the month based on state 1`] = `
Array [
  Object {
    "label": 1,
    "value": 1,
  },
  Object {
    "label": 2,
    "value": 2,
  },
  Object {
    "label": 3,
    "value": 3,
  },
  Object {
    "label": 4,
    "value": 4,
  },
  Object {
    "label": 5,
    "value": 5,
  },
  Object {
    "label": 6,
    "value": 6,
  },
  Object {
    "label": 7,
    "value": 7,
  },
  Object {
    "label": 8,
    "value": 8,
  },
  Object {
    "label": 9,
    "value": 9,
  },
  Object {
    "label": 10,
    "value": 10,
  },
  Object {
    "label": 11,
    "value": 11,
  },
  Object {
    "label": 12,
    "value": 12,
  },
  Object {
    "label": 13,
    "value": 13,
  },
  Object {
    "label": 14,
    "value": 14,
  },
  Object {
    "label": 15,
    "value": 15,
  },
  Object {
    "label": 16,
    "value": 16,
  },
  Object {
    "label": 17,
    "value": 17,
  },
  Object {
    "label": 18,
    "value": 18,
  },
  Object {
    "label": 19,
    "value": 19,
  },
  Object {
    "label": 20,
    "value": 20,
  },
  Object {
    "label": 21,
    "value": 21,
  },
  Object {
    "label": 22,
    "value": 22,
  },
  Object {
    "label": 23,
    "value": 23,
  },
  Object {
    "label": 24,
    "value": 24,
  },
  Object {
    "label": 25,
    "value": 25,
  },
  Object {
    "label": 26,
    "value": 26,
  },
  Object {
    "label": 27,
    "value": 27,
  },
  Object {
    "label": 28,
    "value": 28,
  },
  Object {
    "label": 29,
    "value": 29,
  },
  Object {
    "label": 30,
    "value": 30,
  },
]
`;

exports[`getMonths returns array of short month names 1`] = `
Array [
  Object {
    "label": "Jan",
    "value": 1,
  },
  Object {
    "label": "Feb",
    "value": 2,
  },
  Object {
    "label": "Mar",
    "value": 3,
  },
  Object {
    "label": "Apr",
    "value": 4,
  },
  Object {
    "label": "May",
    "value": 5,
  },
  Object {
    "label": "Jun",
    "value": 6,
  },
  Object {
    "label": "Jul",
    "value": 7,
  },
  Object {
    "label": "Aug",
    "value": 8,
  },
  Object {
    "label": "Sep",
    "value": 9,
  },
  Object {
    "label": "Oct",
    "value": 10,
  },
  Object {
    "label": "Nov",
    "value": 11,
  },
  Object {
    "label": "Dec",
    "value": 12,
  },
]
`;

exports[`getYears returns array of 150 years 1`] = `
Array [
  Object {
    "label": 2000,
    "value": 2000,
  },
  Object {
    "label": 1999,
    "value": 1999,
  },
  Object {
    "label": 1998,
    "value": 1998,
  },
  Object {
    "label": 1997,
    "value": 1997,
  },
  Object {
    "label": 1996,
    "value": 1996,
  },
  Object {
    "label": 1995,
    "value": 1995,
  },
  Object {
    "label": 1994,
    "value": 1994,
  },
  Object {
    "label": 1993,
    "value": 1993,
  },
  Object {
    "label": 1992,
    "value": 1992,
  },
  Object {
    "label": 1991,
    "value": 1991,
  },
  Object {
    "label": 1990,
    "value": 1990,
  },
  Object {
    "label": 1989,
    "value": 1989,
  },
  Object {
    "label": 1988,
    "value": 1988,
  },
  Object {
    "label": 1987,
    "value": 1987,
  },
  Object {
    "label": 1986,
    "value": 1986,
  },
  Object {
    "label": 1985,
    "value": 1985,
  },
  Object {
    "label": 1984,
    "value": 1984,
  },
  Object {
    "label": 1983,
    "value": 1983,
  },
  Object {
    "label": 1982,
    "value": 1982,
  },
  Object {
    "label": 1981,
    "value": 1981,
  },
  Object {
    "label": 1980,
    "value": 1980,
  },
  Object {
    "label": 1979,
    "value": 1979,
  },
  Object {
    "label": 1978,
    "value": 1978,
  },
  Object {
    "label": 1977,
    "value": 1977,
  },
  Object {
    "label": 1976,
    "value": 1976,
  },
  Object {
    "label": 1975,
    "value": 1975,
  },
  Object {
    "label": 1974,
    "value": 1974,
  },
  Object {
    "label": 1973,
    "value": 1973,
  },
  Object {
    "label": 1972,
    "value": 1972,
  },
  Object {
    "label": 1971,
    "value": 1971,
  },
  Object {
    "label": 1970,
    "value": 1970,
  },
  Object {
    "label": 1969,
    "value": 1969,
  },
  Object {
    "label": 1968,
    "value": 1968,
  },
  Object {
    "label": 1967,
    "value": 1967,
  },
  Object {
    "label": 1966,
    "value": 1966,
  },
  Object {
    "label": 1965,
    "value": 1965,
  },
  Object {
    "label": 1964,
    "value": 1964,
  },
  Object {
    "label": 1963,
    "value": 1963,
  },
  Object {
    "label": 1962,
    "value": 1962,
  },
  Object {
    "label": 1961,
    "value": 1961,
  },
  Object {
    "label": 1960,
    "value": 1960,
  },
  Object {
    "label": 1959,
    "value": 1959,
  },
  Object {
    "label": 1958,
    "value": 1958,
  },
  Object {
    "label": 1957,
    "value": 1957,
  },
  Object {
    "label": 1956,
    "value": 1956,
  },
  Object {
    "label": 1955,
    "value": 1955,
  },
  Object {
    "label": 1954,
    "value": 1954,
  },
  Object {
    "label": 1953,
    "value": 1953,
  },
  Object {
    "label": 1952,
    "value": 1952,
  },
  Object {
    "label": 1951,
    "value": 1951,
  },
  Object {
    "label": 1950,
    "value": 1950,
  },
  Object {
    "label": 1949,
    "value": 1949,
  },
  Object {
    "label": 1948,
    "value": 1948,
  },
  Object {
    "label": 1947,
    "value": 1947,
  },
  Object {
    "label": 1946,
    "value": 1946,
  },
  Object {
    "label": 1945,
    "value": 1945,
  },
  Object {
    "label": 1944,
    "value": 1944,
  },
  Object {
    "label": 1943,
    "value": 1943,
  },
  Object {
    "label": 1942,
    "value": 1942,
  },
  Object {
    "label": 1941,
    "value": 1941,
  },
  Object {
    "label": 1940,
    "value": 1940,
  },
  Object {
    "label": 1939,
    "value": 1939,
  },
  Object {
    "label": 1938,
    "value": 1938,
  },
  Object {
    "label": 1937,
    "value": 1937,
  },
  Object {
    "label": 1936,
    "value": 1936,
  },
  Object {
    "label": 1935,
    "value": 1935,
  },
  Object {
    "label": 1934,
    "value": 1934,
  },
  Object {
    "label": 1933,
    "value": 1933,
  },
  Object {
    "label": 1932,
    "value": 1932,
  },
  Object {
    "label": 1931,
    "value": 1931,
  },
  Object {
    "label": 1930,
    "value": 1930,
  },
  Object {
    "label": 1929,
    "value": 1929,
  },
  Object {
    "label": 1928,
    "value": 1928,
  },
  Object {
    "label": 1927,
    "value": 1927,
  },
  Object {
    "label": 1926,
    "value": 1926,
  },
  Object {
    "label": 1925,
    "value": 1925,
  },
  Object {
    "label": 1924,
    "value": 1924,
  },
  Object {
    "label": 1923,
    "value": 1923,
  },
  Object {
    "label": 1922,
    "value": 1922,
  },
  Object {
    "label": 1921,
    "value": 1921,
  },
  Object {
    "label": 1920,
    "value": 1920,
  },
  Object {
    "label": 1919,
    "value": 1919,
  },
  Object {
    "label": 1918,
    "value": 1918,
  },
  Object {
    "label": 1917,
    "value": 1917,
  },
  Object {
    "label": 1916,
    "value": 1916,
  },
  Object {
    "label": 1915,
    "value": 1915,
  },
  Object {
    "label": 1914,
    "value": 1914,
  },
  Object {
    "label": 1913,
    "value": 1913,
  },
  Object {
    "label": 1912,
    "value": 1912,
  },
  Object {
    "label": 1911,
    "value": 1911,
  },
  Object {
    "label": 1910,
    "value": 1910,
  },
  Object {
    "label": 1909,
    "value": 1909,
  },
  Object {
    "label": 1908,
    "value": 1908,
  },
  Object {
    "label": 1907,
    "value": 1907,
  },
  Object {
    "label": 1906,
    "value": 1906,
  },
  Object {
    "label": 1905,
    "value": 1905,
  },
  Object {
    "label": 1904,
    "value": 1904,
  },
  Object {
    "label": 1903,
    "value": 1903,
  },
  Object {
    "label": 1902,
    "value": 1902,
  },
  Object {
    "label": 1901,
    "value": 1901,
  },
  Object {
    "label": 1900,
    "value": 1900,
  },
  Object {
    "label": 1899,
    "value": 1899,
  },
  Object {
    "label": 1898,
    "value": 1898,
  },
  Object {
    "label": 1897,
    "value": 1897,
  },
  Object {
    "label": 1896,
    "value": 1896,
  },
  Object {
    "label": 1895,
    "value": 1895,
  },
  Object {
    "label": 1894,
    "value": 1894,
  },
  Object {
    "label": 1893,
    "value": 1893,
  },
  Object {
    "label": 1892,
    "value": 1892,
  },
  Object {
    "label": 1891,
    "value": 1891,
  },
  Object {
    "label": 1890,
    "value": 1890,
  },
  Object {
    "label": 1889,
    "value": 1889,
  },
  Object {
    "label": 1888,
    "value": 1888,
  },
  Object {
    "label": 1887,
    "value": 1887,
  },
  Object {
    "label": 1886,
    "value": 1886,
  },
  Object {
    "label": 1885,
    "value": 1885,
  },
  Object {
    "label": 1884,
    "value": 1884,
  },
  Object {
    "label": 1883,
    "value": 1883,
  },
  Object {
    "label": 1882,
    "value": 1882,
  },
  Object {
    "label": 1881,
    "value": 1881,
  },
  Object {
    "label": 1880,
    "value": 1880,
  },
  Object {
    "label": 1879,
    "value": 1879,
  },
  Object {
    "label": 1878,
    "value": 1878,
  },
  Object {
    "label": 1877,
    "value": 1877,
  },
  Object {
    "label": 1876,
    "value": 1876,
  },
  Object {
    "label": 1875,
    "value": 1875,
  },
  Object {
    "label": 1874,
    "value": 1874,
  },
  Object {
    "label": 1873,
    "value": 1873,
  },
  Object {
    "label": 1872,
    "value": 1872,
  },
  Object {
    "label": 1871,
    "value": 1871,
  },
  Object {
    "label": 1870,
    "value": 1870,
  },
  Object {
    "label": 1869,
    "value": 1869,
  },
  Object {
    "label": 1868,
    "value": 1868,
  },
  Object {
    "label": 1867,
    "value": 1867,
  },
  Object {
    "label": 1866,
    "value": 1866,
  },
  Object {
    "label": 1865,
    "value": 1865,
  },
  Object {
    "label": 1864,
    "value": 1864,
  },
  Object {
    "label": 1863,
    "value": 1863,
  },
  Object {
    "label": 1862,
    "value": 1862,
  },
  Object {
    "label": 1861,
    "value": 1861,
  },
  Object {
    "label": 1860,
    "value": 1860,
  },
  Object {
    "label": 1859,
    "value": 1859,
  },
  Object {
    "label": 1858,
    "value": 1858,
  },
  Object {
    "label": 1857,
    "value": 1857,
  },
  Object {
    "label": 1856,
    "value": 1856,
  },
  Object {
    "label": 1855,
    "value": 1855,
  },
  Object {
    "label": 1854,
    "value": 1854,
  },
  Object {
    "label": 1853,
    "value": 1853,
  },
  Object {
    "label": 1852,
    "value": 1852,
  },
  Object {
    "label": 1851,
    "value": 1851,
  },
]
`;

exports[`parses campuses query 1`] = `
Object {
  "definitions": Array [
    Object {
      "directives": Array [],
      "kind": "OperationDefinition",
      "name": Object {
        "kind": "Name",
        "value": "GetCampuses",
      },
      "operation": "query",
      "selectionSet": Object {
        "kind": "SelectionSet",
        "selections": Array [
          Object {
            "alias": null,
            "arguments": Array [],
            "directives": Array [],
            "kind": "Field",
            "name": Object {
              "kind": "Name",
              "value": "campuses",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "name",
                  },
                  "selectionSet": null,
                },
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "shortCode",
                  },
                  "selectionSet": null,
                },
                Object {
                  "alias": Object {
                    "kind": "Name",
                    "value": "id",
                  },
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "entityId",
                  },
                  "selectionSet": null,
                },
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "locationId",
                  },
                  "selectionSet": null,
                },
              ],
            },
          },
        ],
      },
      "variableDefinitions": Array [],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 111,
    "source": Source {
      "body": "
  query GetCampuses {
    campuses {
      name
      shortCode
      id: entityId
      locationId
    }
  }
",
      "name": "GraphQL",
    },
    "start": 3,
  },
}
`;

exports[`parses person query 1`] = `
Object {
  "definitions": Array [
    Object {
      "directives": Array [],
      "kind": "OperationDefinition",
      "name": Object {
        "kind": "Name",
        "value": "GetPersonForSettings",
      },
      "operation": "query",
      "selectionSet": Object {
        "kind": "SelectionSet",
        "selections": Array [
          Object {
            "alias": Object {
              "kind": "Name",
              "value": "person",
            },
            "arguments": Array [
              Object {
                "kind": "Argument",
                "name": Object {
                  "kind": "Name",
                  "value": "cache",
                },
                "value": Object {
                  "kind": "Variable",
                  "name": Object {
                    "kind": "Name",
                    "value": "cache",
                  },
                },
              },
            ],
            "directives": Array [],
            "kind": "Field",
            "name": Object {
              "kind": "Name",
              "value": "currentPerson",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "alias": null,
                  "arguments": Array [
                    Object {
                      "kind": "Argument",
                      "name": Object {
                        "kind": "Name",
                        "value": "cache",
                      },
                      "value": Object {
                        "kind": "Variable",
                        "name": Object {
                          "kind": "Name",
                          "value": "cache",
                        },
                      },
                    },
                  ],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "campus",
                  },
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "selections": Array [
                      Object {
                        "alias": Object {
                          "kind": "Name",
                          "value": "id",
                        },
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "entityId",
                        },
                        "selectionSet": null,
                      },
                    ],
                  },
                },
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "firstName",
                  },
                  "selectionSet": null,
                },
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "lastName",
                  },
                  "selectionSet": null,
                },
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "nickName",
                  },
                  "selectionSet": null,
                },
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "email",
                  },
                  "selectionSet": null,
                },
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "birthDay",
                  },
                  "selectionSet": null,
                },
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "birthMonth",
                  },
                  "selectionSet": null,
                },
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "birthYear",
                  },
                  "selectionSet": null,
                },
              ],
            },
          },
        ],
      },
      "variableDefinitions": Array [
        Object {
          "defaultValue": null,
          "kind": "VariableDefinition",
          "type": Object {
            "kind": "NamedType",
            "name": Object {
              "kind": "Name",
              "value": "Boolean",
            },
          },
          "variable": Object {
            "kind": "Variable",
            "name": Object {
              "kind": "Name",
              "value": "cache",
            },
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 253,
    "source": Source {
      "body": "
  query GetPersonForSettings($cache: Boolean) {
    person: currentPerson(cache: $cache) {
      campus(cache: $cache) { id: entityId }
      firstName
      lastName
      nickName
      email
      birthDay
      birthMonth
      birthYear
    }
  }
",
      "name": "GraphQL",
    },
    "start": 3,
  },
}
`;

exports[`renders error version 1`] = `
<div
  style={
    Object {
      "bottom": 0,
      "position": "fixed",
      "top": 0,
      "width": "100%",
    }
  }
>
  <Err
    error={[Function]}
    msg="Looks like there was a problem"
  />
  ;
</div>
`;

exports[`renders loading version 1`] = `
<div
  style={
    Object {
      "bottom": 0,
      "position": "fixed",
      "top": 0,
      "width": "100%",
    }
  }
>
  <Loading
    msg="Updating your information..."
  />
  ;
</div>
`;

exports[`renders success version 1`] = `
<Success
  msg="Your information has been updated!"
/>
`;

exports[`renders with props 1`] = `
<Layout
  campuses={
    Array [
      Object {
        "label": "test",
        "value": "1",
      },
      Object {
        "label": "test",
        "value": "1",
      },
    ]
  }
  days={
    Array [
      Object {
        "label": 1,
        "value": 1,
      },
      Object {
        "label": 2,
        "value": 2,
      },
      Object {
        "label": 3,
        "value": 3,
      },
      Object {
        "label": 4,
        "value": 4,
      },
      Object {
        "label": 5,
        "value": 5,
      },
      Object {
        "label": 6,
        "value": 6,
      },
      Object {
        "label": 7,
        "value": 7,
      },
      Object {
        "label": 8,
        "value": 8,
      },
      Object {
        "label": 9,
        "value": 9,
      },
      Object {
        "label": 10,
        "value": 10,
      },
      Object {
        "label": 11,
        "value": 11,
      },
      Object {
        "label": 12,
        "value": 12,
      },
      Object {
        "label": 13,
        "value": 13,
      },
      Object {
        "label": 14,
        "value": 14,
      },
      Object {
        "label": 15,
        "value": 15,
      },
      Object {
        "label": 16,
        "value": 16,
      },
      Object {
        "label": 17,
        "value": 17,
      },
      Object {
        "label": 18,
        "value": 18,
      },
      Object {
        "label": 19,
        "value": 19,
      },
      Object {
        "label": 20,
        "value": 20,
      },
      Object {
        "label": 21,
        "value": 21,
      },
      Object {
        "label": 22,
        "value": 22,
      },
      Object {
        "label": 23,
        "value": 23,
      },
      Object {
        "label": 24,
        "value": 24,
      },
      Object {
        "label": 25,
        "value": 25,
      },
      Object {
        "label": 26,
        "value": 26,
      },
      Object {
        "label": 27,
        "value": 27,
      },
      Object {
        "label": 28,
        "value": 28,
      },
      Object {
        "label": 29,
        "value": 29,
      },
      Object {
        "label": 30,
        "value": 30,
      },
      Object {
        "label": 31,
        "value": 31,
      },
    ]
  }
  months={
    Array [
      Object {
        "label": "Jan",
        "value": 1,
      },
      Object {
        "label": "Feb",
        "value": 2,
      },
      Object {
        "label": "Mar",
        "value": 3,
      },
      Object {
        "label": "Apr",
        "value": 4,
      },
      Object {
        "label": "May",
        "value": 5,
      },
      Object {
        "label": "Jun",
        "value": 6,
      },
      Object {
        "label": "Jul",
        "value": 7,
      },
      Object {
        "label": "Aug",
        "value": 8,
      },
      Object {
        "label": "Sep",
        "value": 9,
      },
      Object {
        "label": "Oct",
        "value": 10,
      },
      Object {
        "label": "Nov",
        "value": 11,
      },
      Object {
        "label": "Dec",
        "value": 12,
      },
    ]
  }
  person={Object {}}
  saveMonth={[Function]}
  submit={[Function]}
  years={
    Array [
      Object {
        "label": 2000,
        "value": 2000,
      },
      Object {
        "label": 1999,
        "value": 1999,
      },
      Object {
        "label": 1998,
        "value": 1998,
      },
      Object {
        "label": 1997,
        "value": 1997,
      },
      Object {
        "label": 1996,
        "value": 1996,
      },
      Object {
        "label": 1995,
        "value": 1995,
      },
      Object {
        "label": 1994,
        "value": 1994,
      },
      Object {
        "label": 1993,
        "value": 1993,
      },
      Object {
        "label": 1992,
        "value": 1992,
      },
      Object {
        "label": 1991,
        "value": 1991,
      },
      Object {
        "label": 1990,
        "value": 1990,
      },
      Object {
        "label": 1989,
        "value": 1989,
      },
      Object {
        "label": 1988,
        "value": 1988,
      },
      Object {
        "label": 1987,
        "value": 1987,
      },
      Object {
        "label": 1986,
        "value": 1986,
      },
      Object {
        "label": 1985,
        "value": 1985,
      },
      Object {
        "label": 1984,
        "value": 1984,
      },
      Object {
        "label": 1983,
        "value": 1983,
      },
      Object {
        "label": 1982,
        "value": 1982,
      },
      Object {
        "label": 1981,
        "value": 1981,
      },
      Object {
        "label": 1980,
        "value": 1980,
      },
      Object {
        "label": 1979,
        "value": 1979,
      },
      Object {
        "label": 1978,
        "value": 1978,
      },
      Object {
        "label": 1977,
        "value": 1977,
      },
      Object {
        "label": 1976,
        "value": 1976,
      },
      Object {
        "label": 1975,
        "value": 1975,
      },
      Object {
        "label": 1974,
        "value": 1974,
      },
      Object {
        "label": 1973,
        "value": 1973,
      },
      Object {
        "label": 1972,
        "value": 1972,
      },
      Object {
        "label": 1971,
        "value": 1971,
      },
      Object {
        "label": 1970,
        "value": 1970,
      },
      Object {
        "label": 1969,
        "value": 1969,
      },
      Object {
        "label": 1968,
        "value": 1968,
      },
      Object {
        "label": 1967,
        "value": 1967,
      },
      Object {
        "label": 1966,
        "value": 1966,
      },
      Object {
        "label": 1965,
        "value": 1965,
      },
      Object {
        "label": 1964,
        "value": 1964,
      },
      Object {
        "label": 1963,
        "value": 1963,
      },
      Object {
        "label": 1962,
        "value": 1962,
      },
      Object {
        "label": 1961,
        "value": 1961,
      },
      Object {
        "label": 1960,
        "value": 1960,
      },
      Object {
        "label": 1959,
        "value": 1959,
      },
      Object {
        "label": 1958,
        "value": 1958,
      },
      Object {
        "label": 1957,
        "value": 1957,
      },
      Object {
        "label": 1956,
        "value": 1956,
      },
      Object {
        "label": 1955,
        "value": 1955,
      },
      Object {
        "label": 1954,
        "value": 1954,
      },
      Object {
        "label": 1953,
        "value": 1953,
      },
      Object {
        "label": 1952,
        "value": 1952,
      },
      Object {
        "label": 1951,
        "value": 1951,
      },
      Object {
        "label": 1950,
        "value": 1950,
      },
      Object {
        "label": 1949,
        "value": 1949,
      },
      Object {
        "label": 1948,
        "value": 1948,
      },
      Object {
        "label": 1947,
        "value": 1947,
      },
      Object {
        "label": 1946,
        "value": 1946,
      },
      Object {
        "label": 1945,
        "value": 1945,
      },
      Object {
        "label": 1944,
        "value": 1944,
      },
      Object {
        "label": 1943,
        "value": 1943,
      },
      Object {
        "label": 1942,
        "value": 1942,
      },
      Object {
        "label": 1941,
        "value": 1941,
      },
      Object {
        "label": 1940,
        "value": 1940,
      },
      Object {
        "label": 1939,
        "value": 1939,
      },
      Object {
        "label": 1938,
        "value": 1938,
      },
      Object {
        "label": 1937,
        "value": 1937,
      },
      Object {
        "label": 1936,
        "value": 1936,
      },
      Object {
        "label": 1935,
        "value": 1935,
      },
      Object {
        "label": 1934,
        "value": 1934,
      },
      Object {
        "label": 1933,
        "value": 1933,
      },
      Object {
        "label": 1932,
        "value": 1932,
      },
      Object {
        "label": 1931,
        "value": 1931,
      },
      Object {
        "label": 1930,
        "value": 1930,
      },
      Object {
        "label": 1929,
        "value": 1929,
      },
      Object {
        "label": 1928,
        "value": 1928,
      },
      Object {
        "label": 1927,
        "value": 1927,
      },
      Object {
        "label": 1926,
        "value": 1926,
      },
      Object {
        "label": 1925,
        "value": 1925,
      },
      Object {
        "label": 1924,
        "value": 1924,
      },
      Object {
        "label": 1923,
        "value": 1923,
      },
      Object {
        "label": 1922,
        "value": 1922,
      },
      Object {
        "label": 1921,
        "value": 1921,
      },
      Object {
        "label": 1920,
        "value": 1920,
      },
      Object {
        "label": 1919,
        "value": 1919,
      },
      Object {
        "label": 1918,
        "value": 1918,
      },
      Object {
        "label": 1917,
        "value": 1917,
      },
      Object {
        "label": 1916,
        "value": 1916,
      },
      Object {
        "label": 1915,
        "value": 1915,
      },
      Object {
        "label": 1914,
        "value": 1914,
      },
      Object {
        "label": 1913,
        "value": 1913,
      },
      Object {
        "label": 1912,
        "value": 1912,
      },
      Object {
        "label": 1911,
        "value": 1911,
      },
      Object {
        "label": 1910,
        "value": 1910,
      },
      Object {
        "label": 1909,
        "value": 1909,
      },
      Object {
        "label": 1908,
        "value": 1908,
      },
      Object {
        "label": 1907,
        "value": 1907,
      },
      Object {
        "label": 1906,
        "value": 1906,
      },
      Object {
        "label": 1905,
        "value": 1905,
      },
      Object {
        "label": 1904,
        "value": 1904,
      },
      Object {
        "label": 1903,
        "value": 1903,
      },
      Object {
        "label": 1902,
        "value": 1902,
      },
      Object {
        "label": 1901,
        "value": 1901,
      },
      Object {
        "label": 1900,
        "value": 1900,
      },
      Object {
        "label": 1899,
        "value": 1899,
      },
      Object {
        "label": 1898,
        "value": 1898,
      },
      Object {
        "label": 1897,
        "value": 1897,
      },
      Object {
        "label": 1896,
        "value": 1896,
      },
      Object {
        "label": 1895,
        "value": 1895,
      },
      Object {
        "label": 1894,
        "value": 1894,
      },
      Object {
        "label": 1893,
        "value": 1893,
      },
      Object {
        "label": 1892,
        "value": 1892,
      },
      Object {
        "label": 1891,
        "value": 1891,
      },
      Object {
        "label": 1890,
        "value": 1890,
      },
      Object {
        "label": 1889,
        "value": 1889,
      },
      Object {
        "label": 1888,
        "value": 1888,
      },
      Object {
        "label": 1887,
        "value": 1887,
      },
      Object {
        "label": 1886,
        "value": 1886,
      },
      Object {
        "label": 1885,
        "value": 1885,
      },
      Object {
        "label": 1884,
        "value": 1884,
      },
      Object {
        "label": 1883,
        "value": 1883,
      },
      Object {
        "label": 1882,
        "value": 1882,
      },
      Object {
        "label": 1881,
        "value": 1881,
      },
      Object {
        "label": 1880,
        "value": 1880,
      },
      Object {
        "label": 1879,
        "value": 1879,
      },
      Object {
        "label": 1878,
        "value": 1878,
      },
      Object {
        "label": 1877,
        "value": 1877,
      },
      Object {
        "label": 1876,
        "value": 1876,
      },
      Object {
        "label": 1875,
        "value": 1875,
      },
      Object {
        "label": 1874,
        "value": 1874,
      },
      Object {
        "label": 1873,
        "value": 1873,
      },
      Object {
        "label": 1872,
        "value": 1872,
      },
      Object {
        "label": 1871,
        "value": 1871,
      },
      Object {
        "label": 1870,
        "value": 1870,
      },
      Object {
        "label": 1869,
        "value": 1869,
      },
      Object {
        "label": 1868,
        "value": 1868,
      },
      Object {
        "label": 1867,
        "value": 1867,
      },
      Object {
        "label": 1866,
        "value": 1866,
      },
      Object {
        "label": 1865,
        "value": 1865,
      },
      Object {
        "label": 1864,
        "value": 1864,
      },
      Object {
        "label": 1863,
        "value": 1863,
      },
      Object {
        "label": 1862,
        "value": 1862,
      },
      Object {
        "label": 1861,
        "value": 1861,
      },
      Object {
        "label": 1860,
        "value": 1860,
      },
      Object {
        "label": 1859,
        "value": 1859,
      },
      Object {
        "label": 1858,
        "value": 1858,
      },
      Object {
        "label": 1857,
        "value": 1857,
      },
      Object {
        "label": 1856,
        "value": 1856,
      },
      Object {
        "label": 1855,
        "value": 1855,
      },
      Object {
        "label": 1854,
        "value": 1854,
      },
      Object {
        "label": 1853,
        "value": 1853,
      },
      Object {
        "label": 1852,
        "value": 1852,
      },
      Object {
        "label": 1851,
        "value": 1851,
      },
    ]
  }
/>
`;
